# normal-extraction

./: CMakeLists.txt  README.md  main.cpp
